added a Player class

--- a/public/test.html
+++ b/public/test.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <script src="./js/classes/PlayerCharacters.js" type="module"></script>
+    <script src="./js/classes/Player.js" type="module"></script>
 </body>
 
 </html>
