--- a/public/test.html
+++ b/public/test.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <div class="player">
+        
+    </div>
     <script src="./js/classes/Player.js" type="module"></script>
 </body>
 
