Backing the files up

--- a/public/css/font/nougat-extrablack-demo.html
+++ b/public/css/font/nougat-extrablack-demo.html
@@ -19,11 +19,11 @@
 
 	<style type="text/css">
 					body{
-				font-family: 'lilita_oneregular';
+				font-family: 'nougatregular';
 							}
 		</style>
 
-	<title>Lilita One Regular Specimen</title>
+	<title>Nougat Regular Specimen</title>
 	
 	
 	<script type="text/javascript" charset="utf-8">
@@ -36,7 +36,7 @@
 <body>
 <div id="container">
 	<div id="header">
-		Lilita One Regular	</div>
+		Nougat Regular	</div>
 	<ul class="tabs">
 		<li><a href="#specimen">Specimen</a></li>
 		<li><a href="#layout">Sample Layout</a></li>
@@ -91,7 +91,7 @@
 										<div id="xheight">
 				<div class="fontbody">&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;body</div><div class="arialbody">body</div><div class="verdanabody">body</div><div class="georgiabody">body</div></div>
 										<div class="fontbody" style="z-index:1">
-											body<span>Lilita One Regular</span>
+											body<span>Nougat Regular</span>
 										</div>
 										<div class="arialbody" style="z-index:1">
 											body<span>Arial</span>
@@ -296,14 +296,25 @@
 				<div class="grid12 firstcol">
 			
 				<h1>Language Support</h1>
-				<p>The subset of Lilita One Regular in this kit supports the following languages:<br />
+				<p>The subset of Nougat Regular in this kit supports the following languages:<br />
 			
 					Albanian, Basque, Breton, Chamorro, Danish, Dutch, English, Faroese, Finnish, French, Frisian, Galician, German, Icelandic, Italian, Malagasy, Norwegian, Portuguese, Spanish, Alsatian, Aragonese, Arapaho, Arrernte, Asturian, Aymara, Bislama, Cebuano, Corsican, Fijian, French_creole, Genoese, Gilbertese, Greenlandic, Haitian_creole, Hiligaynon, Hmong, Hopi, Ibanag, Iloko_ilokano, Indonesian, Interglossa_glosa, Interlingua, Irish_gaelic, Jerriais, Lojban, Lombard, Luxembourgeois, Manx, Mohawk, Norfolk_pitcairnese, Occitan, Oromo, Pangasinan, Papiamento, Piedmontese, Potawatomi, Rhaeto-romance, Romansh, Rotokas, Sami_lule, Samoan, Sardinian, Scots_gaelic, Seychelles_creole, Shona, Sicilian, Somali, Southern_ndebele, Swahili, Swati_swazi, Tagalog_filipino_pilipino, Tetum, Tok_pisin, Uyghur_latinized, Volapuk, Walloon, Warlpiri, Xhosa, Yapese, Zulu, Latinbasic, Ubasic, Demo				</p>
 				<h1>Glyph Chart</h1>
-				<p>The subset of Lilita One Regular in this kit includes all the glyphs listed below. Unicode entities are included above each glyph to help you insert individual characters into your layout.</p>
+				<p>The subset of Nougat Regular in this kit includes all the glyphs listed below. Unicode entities are included above each glyph to help you insert individual characters into your layout.</p>
 				<div id="glyph_chart">
 			
+																				 <div><p>&amp;#5;</p>&#5;</div>
+																				 <div><p>&amp;#6;</p>&#6;</div>
+																				 <div><p>&amp;#8;</p>&#8;</div>
+																				 <div><p>&amp;#12;</p>&#12;</div>
 																				 <div><p>&amp;#13;</p>&#13;</div>
+																				 <div><p>&amp;#25;</p>&#25;</div>
+																				 <div><p>&amp;#26;</p>&#26;</div>
+																				 <div><p>&amp;#27;</p>&#27;</div>
+																				 <div><p>&amp;#28;</p>&#28;</div>
+																				 <div><p>&amp;#29;</p>&#29;</div>
+																				 <div><p>&amp;#30;</p>&#30;</div>
+																				 <div><p>&amp;#31;</p>&#31;</div>
 																				 <div><p>&amp;#32;</p>&#32;</div>
 																				 <div><p>&amp;#33;</p>&#33;</div>
 																				 <div><p>&amp;#34;</p>&#34;</div>
@@ -414,6 +425,7 @@
 																				 <div><p>&amp;#172;</p>&#172;</div>
 																				 <div><p>&amp;#173;</p>&#173;</div>
 																				 <div><p>&amp;#174;</p>&#174;</div>
+																				 <div><p>&amp;#175;</p>&#175;</div>
 																				 <div><p>&amp;#176;</p>&#176;</div>
 																				 <div><p>&amp;#177;</p>&#177;</div>
 																				 <div><p>&amp;#178;</p>&#178;</div>
@@ -527,12 +539,9 @@
 																				 <div><p>&amp;#8249;</p>&#8249;</div>
 																				 <div><p>&amp;#8250;</p>&#8250;</div>
 																				 <div><p>&amp;#8287;</p>&#8287;</div>
-																				 <div><p>&amp;#8364;</p>&#8364;</div>
 																				 <div><p>&amp;#8482;</p>&#8482;</div>
 																				 <div><p>&amp;#9724;</p>&#9724;</div>
-																				 <div><p>&amp;#64257;</p>&#64257;</div>
-																				 <div><p>&amp;#64258;</p>&#64258;</div>
-																																						</div>	
+																																																</div>	
 				</div>
 		
 		
