--- a/public/test.html
+++ b/public/test.html
@@ -12,7 +12,42 @@
 
 <body>
     <div class="player">
-        
+        <div class="info">
+            <div class="stats">
+                <div class="stat">
+                    <div class="stat-title">Highest Power Play Points</div>
+                    <div class="stat-desc">20000</div>
+                </div>
+                <div class="stat">
+                    <div class="stat-title">Trophies</div>
+                    <div class="stat-desc">20000</div>
+                </div>
+                <div class="stat">
+                    <div class="stat-title">Trophies</div>
+                    <div class="stat-desc">20000</div>
+                </div>
+                <div class="stat">
+                    <div class="stat-title">Trophies</div>
+                    <div class="stat-desc">20000</div>
+                </div>
+                <div class="stat">
+                    <div class="stat-title">Trophies</div>
+                    <div class="stat-desc">20000</div>
+                </div>
+                <div class="stat">
+                    <div class="stat-title">Trophies</div>
+                    <div class="stat-desc">20000</div>
+                </div>
+                <div class="stat">
+                    <div class="stat-title">Trophies</div>
+                    <div class="stat-desc">20000</div>
+                </div>
+                <div class="stat">
+                    <div class="stat-title">Trophies</div>
+                    <div class="stat-desc">20000</div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="./js/classes/Player.js" type="module"></script>
 </body>
